# Snek

./: CMakeLists.txt  Food.c  Food.h  GameManager.c  GameManager.h  Grid.c  Grid.h  Snake.c  Snake.h  SnakeArray.c  SnakeArray.h  Visuals.c  Visuals.h  main.c
